--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 10.5.1),
                libgeoclue-2-dev,
                libgtk-3-dev,
                libgweather-3-dev,
+               libhandy-1-dev,
                meson,
                valac
 Standards-Version: 4.1.1
